Bug 451376 – IAccessibleText::attributes provides incorrect info after a mis-spelled word, r=Olli.Pettay, MarcoZ, sr=neil